fix: add create title

--- a/TrafficTracer/Pages/CreatePage.xaml
+++ b/TrafficTracer/Pages/CreatePage.xaml
@@ -7,6 +7,10 @@
              x:DataType="vm:CreateViewModel">
     
     <VerticalStackLayout Padding="10" Spacing="10">
+        <Label Text="Créer une Immatriculation"
+               FontSize="24"
+               FontAttributes="Bold" />
+        
         <Entry Placeholder="Plaque" Text="{Binding Plate}" />
 
         <Picker Title="Type de plaque"
